k8files/asteroid_nodeport_service.yml
---
kind: Service
apiVersion: v1
metadata:
    name: asteroid-service-nodeport
spec:
    type: NodePort
    selector:
        app: asteroid-test-flask
    ports:
        - port: 5000
          targetPort: 5000
