k8files/asteroid_ingress.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: asteroid-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "tagower.coe332.tacc.cloud"
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: asteroid-service-nodeport
              port:
                  number: 31294 <YourPortHere>
